[gd_scene load_steps=2 format=2]

[ext_resource path="res://Common/SensorsManager.gd" type="Script" id=1]

[node name="SensorsManager" type="Spatial"]
script = ExtResource( 1 )

[node name="UpdateSensors" type="Timer" parent="."]

[connection signal="timeout" from="UpdateSensors" to="." method="_on_UpdateSensors_timeout"]
